--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /BandhanApp/.vs/BandhanApp/FileContentIndex/cc1f62e4-58a4-4279-93c5-affd5379aa08.vsidx
 /BandhanApp/.vs/BandhanApp/FileContentIndex/e0c9c650-85d6-48ae-9614-6ef28dd7e57d.vsidx
 /BandhanApp/.vs/BandhanApp/FileContentIndex/ea041d55-6f9f-4d55-8479-674a2b86dbd0.vsidx
+/BandhanApp/.vs/BandhanApp/FileContentIndex/7ebdcf97-d607-4e21-9099-cecbb71e69c9.vsidx
+/BandhanApp/.vs/BandhanApp/FileContentIndex/8292c7e3-2124-4265-9b3f-18b92abe7226.vsidx
