Areas folder modified

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 /BandhanApp/.vs/BandhanApp/FileContentIndex/ea041d55-6f9f-4d55-8479-674a2b86dbd0.vsidx
 /BandhanApp/.vs/BandhanApp/FileContentIndex/7ebdcf97-d607-4e21-9099-cecbb71e69c9.vsidx
 /BandhanApp/.vs/BandhanApp/FileContentIndex/8292c7e3-2124-4265-9b3f-18b92abe7226.vsidx
+/BandhanApp/.vs/BandhanApp/FileContentIndex/245b35c5-f1ef-4ad2-acc7-6060861f45a3.vsidx
+/BandhanApp/.vs/BandhanApp/FileContentIndex/a478dc31-5b1b-4d00-ba67-1af83ab7a9fb.vsidx
+/BandhanApp/.vs/BandhanApp/FileContentIndex/e7b71193-214c-4c3d-a3ec-cf96afe59d59.vsidx
